# parliament-mcp

./: Dockerfile  pyproject.toml
parliament_mcp/: qdrant_data_loaders.py
